2007-01-16  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tcltime.c (NsTclInitTimeType): Remove unneeded (and wrong on
	x86-64) int/long size test.
	Bug #1636688. Thanks, Martin Matuska.

	* doc/src/mann/ns_limits.man: Document the ns_limits commands.
	* doc/src/ns_limits_get.man:
	* doc/src/ns_limits_list.man:
	* doc/src/ns_limits_register.man:
	* doc/src/ns_limits_set.man: Removed.

	* doc/src/mann/ns_cookie.man: Consolidate the cookie documentation.
	* doc/src/ns_getcookie.man:
	* doc/src/ns_setcookie.man:
	* doc/src/ns_deletecookie.man:

2007-01-09  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/adprequest.c: Fixed bug when ADP flag for processing .tcl
	files was not set correctly

2007-01-06  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/nsconf.c: Made jobtimeout having default value of 300
	seconds to exit unnecassary job threads
	
	* nsd/nsmain.c: Changed config file processing logic, if none is 
	given the server will try to find nsd.tcl in the conf/ subdir 
	taking the base path from executable. This requirements looks very
	non-modern nowadays, Apache uses default but can take full path, for
	example.

2006-12-29  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/adpcmds.c:
	* doc/src/ns_adp_parse.man:
	* doc/src/ns_adp_include.man: Updated so flags can be set/unset using
	ns_adp_ctl command only. ADP flags are saved before executing include or
	parse command and then restored.

2006-12-29  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tcljob.c: Possible uninitilized usage of pointer
	* nsd/tclmisc.c: Fixed bug in ns_filestat which returned wrong ctime/mtime

	* nsd/nsd.h:
	* nsd/server.c:
	* nsd/adprequest.c:
	* nsd/adpcmds.c:
	* nsd/adpeval.c:
	* nsd/adpparse.c: Changed default mode of ADP to no cache, cache
	if endbled breaks all existing dynamic applications, with cache enabled
	special care must be taken in producing correct result and also
	cache does not account for query parameters, so dynamic ADP page