@@ -1,3 +1,9 @@
+2007-01-20  Vlad Seryakov  <seryakov@users.sf.net>
+
+	* nsd/encoding.c: Change message about encoding loaded 
+	from Notice to Debug level. This message is printed on server 
+	start before even log file is opened.
+
 2007-01-16  Stephen Deasey  <sdeasey@users.sf.net>
 
 	* nsd/tcltime.c (NsTclInitTimeType): Remove unneeded (and wrong on
